manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-deployment
  labels:
    app: golang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golang
  template:
    metadata:
      labels:
        app: golang
    spec:
      containers:
      - name: golang
        image: gcr.io/k8s-examples-316720/goapp-example:lattest
        ports:
        - containerPort: 300
